--- a/research_os/web/ui/package.json
+++ b/research_os/web/ui/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "d3-force-3d": "^3.0.6",
     "framer-motion": "^12.23.26",
+    "katex": "^0.16.27",
     "lucide-react": "^0.561.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
